# isaac_hydra_ext

./: README.md  bootstrap_isaac_hydra_ext.sh  pyproject.toml
isaac_hydra_ext/: __init__.py  appo_runner.py  rewards.py
isaac_hydra_ext/conf/: train_appo.yaml
isaac_hydra_ext/conf/agent/: rsl_rl.yaml
isaac_hydra_ext/conf/checkpoint/: default.yaml
isaac_hydra_ext/conf/env/: isaac_go1_nav.yaml
isaac_hydra_ext/conf/experiment/: default.yaml
isaac_hydra_ext/conf/logging/: default.yaml
isaac_hydra_ext/conf/ppo/: default.yaml
isaac_hydra_ext/conf/task/: go1_nav_v1.yaml
isaac_hydra_ext/plugins/: searchpath_plugin.py
isaac_hydra_ext/scripts/: run_play_with_ext.py  run_train_with_ext.py
isaac_hydra_ext/scripts/reinforcement_learning/appo/: cli_args.py  queue_single.py  test.py  train.py  train_appo_gpu.py
isaac_hydra_ext/scripts/reinforcement_learning/appo/runners/: __init__.py  on_policy_runner.py  on_policy_runner_dafault.py
isaac_hydra_ext/source/isaaclab_tasks/: __init__.py
isaac_hydra_ext/source/isaaclab_tasks/manager_based/locomotion/velocity/: velocity_env_cfg.py
isaac_hydra_ext/source/isaaclab_tasks/manager_based/locomotion/velocity/config/go1/: __init__.py  rough_env_cfg.py
isaac_hydra_ext/source/isaaclab_tasks/manager_based/locomotion/velocity/config/go1/agents/: appo_cfg.yaml
isaac_hydra_ext/source/isaaclab_tasks/manager_based/locomotion/velocity/config/go1/env_scene/: __init__.py  (+10 more)
isaac_hydra_ext/source/isaaclab_tasks/utils/: __init__.py  check_dimensions.py  env_unwrapper.py  hydra.py  parse_cfg.py
isaac_hydra_ext/utils/: nn_arch.py
