[project]
name = "isaac_hydra_ext"
version = "0.1.0"
description = "Local Hydra extension for Isaac (configs + rewards)"
authors = [{name="You"}]
requires-python = ">=3.9"
dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "torch",
    "gymnasium",
    "dill",
]

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["isaac_hydra_ext", "isaac_hydra_ext.plugins"]

[tool.setuptools.package-data]
isaac_hydra_ext = ["conf/**/*"]

# Регистрируем Hydra SearchPath плагин
[project.entry-points."hydra.searchpath"]
isaac_hydra_ext = "isaac_hydra_ext.plugins.searchpath_plugin:IsaacHydraExtSearchPathPlugin"
